[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/back.png" type="Texture" id=1]
[ext_resource path="res://Assets/BebasNeueRegular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="Instructions" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 487.332, 303.193 )
scale = Vector2( 0.75, 0.5 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "Instructions"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instruction" type="Label" parent="Label"]
margin_top = 150.0
margin_right = 1024.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 2 )
text = "The game is very simple. 
Point and click to destroy enemies.
When you have reached the level objective a portal will appear.
When you touch the portal the next level will start.
Good luck."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 412.0
margin_top = 375.0
margin_right = 612.0
margin_bottom = 435.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
