[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/BebasNeueRegular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/back.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 517.483, 301.122 )
scale = Vector2( 0.75, 0.5 )
z_index = -10
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
text = "Welcome"
align = 1
valign = 1

[node name="Play" type="Button" parent="."]
margin_left = 412.0
margin_top = 260.0
margin_right = 612.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="Quit" type="Button" parent="."]
margin_left = 412.0
margin_top = 420.0
margin_right = 612.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Button" parent="."]
margin_left = 412.0
margin_top = 340.0
margin_right = 612.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 3 )
text = "Instructions"
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
